[M142] NTP Promos: Address issues found in UX review
Original change's description:
> NTP Promos: Address issues found in UX review
> 
> These are subtle changes, covering:
> 
> - Better handling of long promo text (per updated design by UX)
> - Padding edits
> - Corner radius
> - Differing promo width in 1 or 2 promo case
> - Text line height
> 
> Bug: 448398823
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6998053
> Commit-Queue: Christopher Grant <cjgrant@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1524438}

(cherry picked from commit e8e4d8598d1adb2c63ff0b008db09e6c504f80e0)

Bug: 449705413,448398823
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7012170
Auto-Submit: Chrome Cherry Picker <chrome-cherry-picker@chops-service-accounts.iam.gserviceaccount.com>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7444@{#415}
Cr-Branched-From: 29907d3c18078029695f458b42fb8e6fda3e493d-refs/heads/main@{#1522585}

--- a/chrome/browser/resources/new_tab_page/ntp_promo/setup_list.css
+++ b/chrome/browser/resources/new_tab_page/ntp_promo/setup_list.css
@@ -15,9 +15,8 @@
   --setup-list-border-radius: 12px;
   --setup-list-item-spacing: 12px;
   --setup-list-margin: 8px;
-  --setup-list-padding: 12px;
   --setup-list-separator-color: var(--color-sys-base-container);
-  --setup-list-separator-size: 2px;
+  --setup-list-separator-size: 1px;
 }
 
 #promos {
